--------------------------------------------------------------------------------------------------
Release notes version 1.7.5 : Enhancements, modifications and corrected bugs since version 1.7.4 :
--------------------------------------------------------------------------------------------------
28/03/17 (TrioCFD) New feature : FTD. Contact angle hysteresis available in test (via #define PATCH_HYSTERESIS_V3)
28/03/17 (TrioCFD) Minor change: FTD. equilateral option available + preserve FT elements in corners (without remeshing)
28/03/17 (TrioCFD) New feature : FTD. Thermal coupling : solid + liquid + vapour (with phase-change)
31/01/17 (TrioCFD) Bug fixed   : FTD. Backup to the first time step if resumed a Front-Tracking calculation
--------------------------------------------------------------------------------------------------
Release notes version 1.7.4 : Enhancements, modifications and corrected bugs since version 1.7.3 :
--------------------------------------------------------------------------------------------------
09/12/16 (Tools)   Announcement: New Documentation Reference Guide
25/11/16 (TRUST)   Portability : Update with modifications from TRUST 1.7.4
--------------------------------------------------------------------------------------------------
Release notes version 1.7.3 : Enhancements, modifications and corrected bugs since version 1.7.2 :
--------------------------------------------------------------------------------------------------
03/06/16 (TrioCFD) Optimization: New low-Reybolds turbulence model available
03/06/16 (TrioCFD) New feature : Nonlinear k-epsilon turbulence model added
26/05/16 (TrioCFD) Minor change: New CEG dependency: Critere_Entrainement_Gaz
03/02/16 (TrioCFD) Bug fixed   : Resume a Front-Tracking calculation is now ok
--------------------------------------------------------------------------------------------------
Release notes version 1.7.2 : Enhancements, modifications and corrected bugs since version 1.7.1 :