@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------------------------
 Release notes version 1.7.5 : Enhancements, modifications and corrected bugs since version 1.7.4 :
 --------------------------------------------------------------------------------------------------
+18/05/17 (TrioCFD) Minor change: New Schema_Euler_Implicite_Stationnaire dependency: local time step
 28/03/17 (TrioCFD) New feature : FTD. Contact angle hysteresis available in test (via #define PATCH_HYSTERESIS_V3)
 28/03/17 (TrioCFD) Minor change: FTD. equilateral option available + preserve FT elements in corners (without remeshing)
 28/03/17 (TrioCFD) New feature : FTD. Thermal coupling : solid + liquid + vapour (with phase-change)
